# osan-2025-assignment-a-pretzeldas

./: .gitignore  CMakeLists.txt  Makefile  README.md  pfusch.c
